syntax = "proto3";
package dydxprotocol.prices;

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/prices/types";

// MarketPrice is used by the application to store/retrieve oracle price.
message MarketPrice {
  // Unique, sequentially-generated value that matches `MarketParam`.
  uint32 id = 1;

  // Static value. The exponent of the price. See the comment on the duplicate
  // MarketParam field for more information.
  sint32 exponent = 2;

  // The variable value that is updated by oracle price updates.
  uint64 price = 3;
}
